--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Gilfoyle's Blogs
+subtitle: 我的技术学习笔记
 use-site-title: true
 ---
 
